scss/partials/_onboard_wrapper.scss
div.onboard-wrapper-container {
  div.onboard-wrapper {
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    display: flex;

    div.onboard-wrapper-left {
      background-color: $carrot_dark_bg_gray;
      padding: 21px;
      flex: 1;
      position: absolute;
      position: fixed;
      top: 0px;
      bottom: 0px;
      left: 0px;
      width: 50%;

      div.onboard-wrapper-logo {
        width: 82px;
        height: 20px;
        background-image: cdnUrl("/img/ML/carrot_logo_with_copy_gray.svg");
        background-size: 82px 20px;
        background-repeat: no-repeat;
      }

      div.onboard-wrapper-box {
        position: absolute;
        left: 50%;
        top: 220px;
        margin-left: -147px;
        margin-top: 0px;
        width: 294px;
        height: 301px;
        @include image-2x("/img/ML/carrot_box");
        background-size: 294px 301px;
        background-repeat: no-repeat;
      }
    }

    div.onboard-wrapper-right {
      text-align: center;
      flex: 1;
      position: absolute;
      top: 0px;
      bottom: 0px;
      right: 0px;
      width: 50%;
    }
  }
}

div.onboard-email-container {
  width: 339px;
  @include avenir_M;
  color: $carrot_gray;
  font-size: 32px;
  margin: 0 auto;
  position: relative;
  top: 50%;

  &.small {
    font-size: 24px;
  }

  &.dot-animation {
    text-align: left;
    width: 260px;
  }

  &.error {
    color: $carrot_orange;
  }

  div.email-wall-sent-link {
    color: $carrot_light_gray;
    @include avenir_R();
    font-size: 16px;
    color: $oc_gray_7;
    margin-top: 16px;

    span.email-address {
      @include avenir_H();
      color: $oc_gray_7;
    }
  }

  button.continue {
    margin-top: 16px;
    width: 170px;
    height: 42px;
    background-color: #4D67FC;
    color: white;
    @include avenir_H();
    font-size: 16px;
    border-radius: 4px;
    outline: none;
    border: none;

    &.disabled {
      opacity: 0.8;
    }
  }
}

div.onboard-lander {
  text-align: center;
  margin-top: 34px;

  div.steps {
    height: 58px;

    div.steps-internal {
      position: relative;
      margin: 0 auto;

      &.two-steps {
        width: 278px;
      }

      &.three-steps {
        width: 464px;
      }

      div.step-1, div.step-2, div.step-3 {
        width: 92px;
        height: 53px;
        color: rgba($oc_gray_7, 0.5);
        @include avenir_H();
        font-size: 12px;
        position: absolute;
        padding-top: 36px;
        text-align: center;

        &:before {
          width: 28px;
          height: 28px;
          @include image-2x("/img/ML/onboard_step_balloon");
          background-size: 28px;
          background-repeat: no-repeat;
          position: absolute;
          top: 0px;
          left: 50%;
          margin-left: -14px;
          padding-top: 7px;
          @include avenir_H();
          font-size: 12px;
          color: white;
        }

        &.active {
          color: $oc_gray_7;
          &:before {
            @include image-2x("/img/ML/onboard_step_balloon_blue");
          }
        }
      }

      div.step-1 {
        left: 0px;
        top: 0px;

        &:before {
          content: "1";
        }
      }

      div.step-2 {
        left: 186px;
        top: 0px;

        &:before {
          content: "2";
        }
      }

      div.step-3 {
        left: 374px;
        top: 0px;

        &:before {
          content: "3";
        }
      }

      div.step-progress-bar {
        height: 2px;
        width: 156px;
        background-color: $carrot_light_gray_2;
        position: absolute;
        top: 12px;

        &.active {
          background-color: $carrot_light_gray_2;
        }
      }

      div.step-progress-bar:nth-child(2) {
        left: 61px;
      }

      div.step-progress-bar:nth-child(4) {
        left: 248px;
      }
    }
  }

  div.main-cta {

    div.title {
      margin-top: 64px;
      @include avenir_H();
      font-size: 32px;
      color: $carrot_dark_brown_1;
      letter-spacing: auto;
      line-height: 44px;

      &.main-lander {
        margin-top: 117px;
      }

      &.about-yourself {
        margin-top: 25px;
      }

      &.company-setup {
        margin-top: 25px;
      }
    }

    div.subtitle {
      @include avenir_R();
      font-size: 16px;
      color: $oc_gray_7;
      margin-top: 16px;

      &.error {
        color: $carrot_orange;
      }

      span.email-address {
        @include avenir_H();
        color: $oc_gray_7;
      }
    }
  }

  div.onboard-form {
    width: 340px;
    margin: 0 auto 32px;
    text-align: left;

    button.signup-with-slack {
      width: 340px;
      height: 48px;
      margin-top: 52px;
      background-color: rgba($carrot_text_blue, 0.1);
      border-radius: 100px;
      padding: 14px 78px;
      @include avenir_H();
      font-size: 18px;
      color: $carrot_text_blue;
      text-align: left;

      div.slack-blue-icon {
        width: 70px;
        height: 21px;
        @include image-2x("/img/ML/slack_blue_icon");
        background-repeat: no-repeat;
        background-size: 70px 21px;
        float: right;
      }
    }

    div.or-with-email {
      @include avenir_H();
      font-size: 16px;
      color: rgba($oc_gray_7, 0.7);
      text-align: center;
      margin-top: 36px;
    }

    div.logo-upload-container {
      margin-top: 112px;
      width: 340px;
      min-height: 80px;
      cursor: pointer;

      &:hover {
        div.add-picture-link {
          text-decoration: underline;
        }
      }

      &.org-logo {
        width: 340px;

        div.org-avatar.missing-logo {
          position: relative;
          width: 80px;
          height: 80px;
          background-color: rgba($carrot_text_blue, 0.3);
          border-radius: 40px;

          &:after {
            content: "";
            display: block;
            width: 16px;
            height: 16px;
            @include image-2x("/img/ML/onboard_plus_icon");
            background-repeat: no-repeat;
            background-size: 16px;
            margin-top: 32px;
            margin-left: 32px;
          }
        }

        div.org-avatar {
          @include org-avatar(80);
          margin-right: 10px;

          div.org-avatar-container {
            img.org-avatar-img {
              max-width: 340px;
            }
          }
        }

        div.add-picture-link {
          margin-left: 0px;
          margin-top: 10px;
        }

        div.add-picture-link-subtitle {
          margin-left: 0px;
          margin-top: 10px;
        }
      }

      div.user-avatar-img-container {
        float: left;
      }

      @include user-profile(82);

      div.add-picture-link {
        @include avenir_H();
        font-size: 14px;
        color: $carrot_text_blue;
        float: left;
        margin-left: 24px;
        margin-top: 16px;
        width: 220px;
      }

      div.add-picture-link-subtitle {
        @include avenir_R();
        font-size: 14px;
        color: rgba($oc_gray_7, 0.5);
        float: left;
        margin-left: 24px;
        margin-top: 12px;
        width: 220px;
      }
    }

    div.field-label {
      @include avenir_H();
      font-size: 15px;
      color: #8C9096;
      margin-top: 32px;

      span.error {
        margin-left: 16px;
        color: $carrot_orange;
      }
    }

    div.field-description {
      @include avenir_R();
      font-size: 14px;
      margin-top: 16px;
      color: rgba($oc_gray_7, 0.5);
      text-align: center;

      a {
        text-decoration: underline;
        color: rgba($oc_gray_7, 0.5);
      }
    }

    div.footer-link {
      margin-top: 20px;
      @include avenir_R();
      font-size: 14px;
      color: $oc_gray_7;
      text-align: center;

      a {
        display: block;
        @include avenir_H();
        font-size: 16px;
        color: $oc_gray_7;
        text-decoration: underline;
      }
    }

    input.field {
      width: 100%;
      height: 40px;
      border-radius: 4px;
      background-color: white;
      border: 1px solid rgba($carrot_light_gray_1, 0.5);
      outline: none;
      padding: 10px 16px;
      position: relative;
      @include avenir_BOOK();
      font-size: 16px;
      color: $oc_gray_7;
      line-height: 24px;
      letter-spacing: 0.2px;
      box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.07);
      margin-top: 4px;

      @include placeholder() {
        @include avenir_R();
        font-size: 16px;
        color: $carrot_light_gray;
      }

      &.error {
        border: 1px solid rgba($carrot_orange, 0.5);
      }
    }

    div.description {
      @include avenir_R();
      color: rgba($oc_gray_7, 0.5);
      font-size: 14px;
      margin-top: 24px;

      a {
        text-decoration: underline;
        color: rgba($oc_gray_7, 0.5);
      }
    }

    button.continue {
      margin-top: 35px;
      outline: none;
      border: none;
      width: 100%;
      height: 48px;
      background-color: #4D67FC;
      color: white;
      @include avenir_H();
      font-size: 16px;
      border-radius: 100px;

      &.disabled {
        opacity: 0.8;
      }
    }
  }

  &.lander-team {
    div.onboard-form {
      button.continue {
        margin-top: 149px;
      }
    }
  }
}

div.setup-screen {
  background-color: $carrot_text_blue;
  width: 100vw;
  height: 100vh;
  text-align: center;
  @include avenir_H();
  font-size: 25px;
  color: white;

  div.setup-cta {
    position: relative;
    top: 50%;
    padding-top: 85px;
  }

  div.oc-loading.rloading {
    background-color: transparent;
  }
  
  div.balloon {
    position: absolute;
    background-position: center;
    background-repeat: no-repeat;
    z-index: 1;

    // Top left corner
    &.big-yellow {
      @include image-2x("/img/ML/balloon_big_yellow");
      background-size: 172px 172px;
      width: 172px;
      height: 172px;
      left: -57px;
      top: -37px;
    }

    &.small-face-purple {
      @include image-2x("/img/ML/balloon_small_purple_face");
      background-size: 48px 48px;
      width: 48px;
      height: 48px;
      left: 9.68%;
      top: 11.87%;
    }

    &.small-red {
      @include image-2x("/img/ML/balloon_small_red_1");
      background-size: 17px 15px;
      width: 17px;
      height: 15px;
      left: 13.43%;
      top: 8.00%;
    }

    // Top right corner
    &.big-red {
      @include image-2x("/img/ML/setup_screen_balloon_big_red");
      background-size: 241px 223px;
      width: 241px;
      height: 223px;
      left: 65.31%;
      top: 4.00%;
    }

    &.small-face-yellow {
      @include image-2x("/img/ML/balloon_small_yellow_face");
      background-size: 48px 48px;
      width: 48px;
      height: 48px;
      left: 77.96%;
      top: 27.37%;
    }

    &.small-yellow {
      @include image-2x("/img/ML/balloon_small_yellow");
      background-size: 15px 15px;
      width: 15px;
      height: 15px;
      left: 86.01%;
      top: 25.50%;
    }

    // Bottom left corner

    &.big-green {
      @include image-2x("/img/ML/setup_screen_balloon_big_green");
      background-size: 111px 95px;
      width: 111px;
      height: 95px;
      left: 21.72%;
      top: 67.12%;
    }

    &.small-purple {
      @include image-2x("/img/ML/balloon_small_purple");
      background-size: 23px 21px;
      width: 23px;
      height: 21px;
      left: 27.65%;
      top: 63.5%;
    }

    // Bottom right corner
    &.big-purple {
      @include image-2x("/img/ML/setup_screen_balloon_big_purple");
      background-size: 203px 205px;
      width: 203px;
      height: 205px;
      right: 0px;
      bottom: 0px;
    }
  } 
}

